--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.25",
+    "axios": "^1.6.8",
     "expo": "~49.0.23",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -30,6 +31,8 @@
     "react-native": "0.72.10",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
