--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.25",
     "axios": "^1.6.8",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.23",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
