--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.23",
     "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
@@ -40,7 +41,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "expo-haptics": "~12.4.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
