--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
-    "react-native-reanimated": "^3.8.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@shopify/flash-list": "1.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
