--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.25",
+    "@rnmapbox/maps": "^10.1.24",
+    "@shopify/flash-list": "1.4.3",
     "axios": "^1.6.8",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.23",
+    "expo-camera": "~13.4.4",
     "expo-font": "~11.4.0",
     "expo-haptics": "~12.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
+    "expo-media-library": "~15.4.1",
     "expo-router": "^2.0.0",
+    "expo-sharing": "~11.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -42,12 +48,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "zustand": "^4.5.2",
-    "@shopify/flash-list": "1.4.3",
-    "expo-image-picker": "~14.3.2",
-    "expo-camera": "~13.4.4",
-    "expo-sharing": "~11.5.0",
-    "expo-media-library": "~15.4.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
