--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -13,50 +13,53 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.25",
-    "@rnmapbox/maps": "^10.1.24",
-    "@shopify/flash-list": "1.4.3",
+    "@rnmapbox/maps": "^10.1.27",
+    "@shopify/flash-list": "1.6.4",
     "axios": "^1.6.8",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~49.0.23",
-    "expo-camera": "~13.4.4",
-    "expo-font": "~11.4.0",
-    "expo-haptics": "~12.4.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-linking": "~5.0.2",
-    "expo-media-library": "~15.4.1",
-    "expo-router": "^2.0.0",
-    "expo-sharing": "~11.5.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
+    "expo": "^51.0.17",
+    "expo-camera": "~15.0.12",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.7",
+    "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.6",
+    "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.4",
+    "expo-router": "~3.5.17",
+    "expo-sharing": "~12.0.1",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.6",
+    "expo-web-browser": "~13.0.3",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.74.2",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-confetti-cannon": "^1.5.2",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "1.7.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.79",
+    "babel-preset-expo": "^11.0.11",
     "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
+    "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.4.2"
+    "typescript": "~5.3.3"
   },
   "overrides": {
     "react-refresh": "~0.14.0"
